--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,14 @@
         android:layout_height="wrap_content"
         android:text="Hello World!" />
 
+    <com.google.android.gms.ads.NativeExpressAdView
+        android:id="@+id/nativeAds"
+        android:layout_width="match_parent"
+        ads:adSize="BANNER"
+        android:layout_marginTop="100dp"
+        ads:adUnitId="@string/banner_ad_unit_id"
+        android:layout_height="wrap_content"></com.google.android.gms.ads.NativeExpressAdView>
+
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="wrap_content"
