--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,9 +19,9 @@
     <com.google.android.gms.ads.NativeExpressAdView
         android:id="@+id/nativeAds"
         android:layout_width="match_parent"
-        ads:adSize="BANNER"
+        ads:adSize="320x80"
         android:layout_marginTop="100dp"
-        ads:adUnitId="@string/banner_ad_unit_id"
+        ads:adUnitId="@string/native_ad_unit_id"
         android:layout_height="wrap_content"></com.google.android.gms.ads.NativeExpressAdView>
 
     <com.google.android.gms.ads.AdView
