--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         ads:adSize="320x80"
         android:layout_marginTop="100dp"
         ads:adUnitId="@string/native_ad_unit_id"
-        android:layout_height="wrap_content"></com.google.android.gms.ads.NativeExpressAdView>
+        android:layout_height="wrap_content">
+    </com.google.android.gms.ads.NativeExpressAdView>
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
